compliance_pipeline/c2p_plugin/policy-resources/require-tls-on-ingress/require-tls-on-ingress.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-tls-on-ingress
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: require-tls
      match:
        resources:
          kinds:
            - Ingress
      validate:
        message: "Ingress must have TLS configured (hosts or secretName)"
        anyPattern:
          - metadata:
              annotations:
                nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
            spec:
              tls:
                - hosts: "*"
          - metadata:
              annotations:
                nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
            spec:
              tls:
                - secretName: "*"
